trying to fix font not appearing on mobile

--- a/src/components/utils/PropertyPhoto/propertyPhoto.scss
+++ b/src/components/utils/PropertyPhoto/propertyPhoto.scss
@@ -39,6 +39,7 @@ $BORDER_RADIUS: 10px;
       justify-content: space-between;
       align-items: center;
       padding: 0 2%;
+      font-family: "Nunito", sans-serif;
 
       transform: translate(0, 100%);
       transition: all 0.3s;
@@ -66,6 +67,7 @@ $BORDER_RADIUS: 10px;
     background-color: #dedede;
     padding: 0 4%;
     transition: all 0.3s;
+    font-family: "Nunito", sans-serif;
 
     > h3 {
       color: $sigGrey;
@@ -78,12 +80,14 @@ $BORDER_RADIUS: 10px;
       display: flex;
       justify-content: flex-start;
       padding: 10px 0;
+      font-family: "Nunito", sans-serif;
 
       .room-stat {
         display: flex;
         align-items: center;
         justify-content: space-between;
         font-size: 1.6rem;
+        font-family: "Nunito", sans-serif;
         color: $sigGrey;
         width: 20%;
         margin-right: 20px;
